# opengl_transformation_texture

./: Application.cpp  CMakeLists.txt  IndexBuffer.h  Shader.cpp
libs/: Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transformation.cpp  Transformation.h  VertexArray.cpp
res/shaders/: Basic.shader
